[package]
name = "rustaclysm"
version = "0.1.0"
description = "A 3D reimplementation of Cataclysm: Dark Days Ahead using Bevy"
license = "AGPL-3.0-or-later"
readme = "readme.md"
repository = "https://github.com/papow65/rustaclysm"
authors = [ "papow65 <papow65@protonmail.com>" ]
exclude = [ "/screenshots/" ]
edition = "2024"
rust-version = "1.87" # should be latest stable

[workspace]
# List internal dependencies: cargo tree | rg rustaclysm
members = [ "crates/*" ]

[dependencies]
application_state = { workspace = true }
background = { workspace = true }
bevy = { workspace = true }
gameplay = { workspace = true }
git-version = "0.3"
hud = { workspace = true }
keyboard = { workspace = true }
loading = { workspace = true }
main_menu = { workspace = true }
manual = { workspace = true }
pre_gameplay = { workspace = true }
util = { workspace = true }

[workspace.dependencies]
# We limit this list to crates that are used in multiple crates.
application_state = { path = "crates/application_state" }
background = { path = "crates/background" }
bevy = { version = "0.16.0", default-features = false, features = [ "async_executor", "bevy_asset", "bevy_dev_tools", "bevy_pbr", "bevy_log", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend", "bevy_window", "multi_threaded", "png", "std", "tonemapping_luts", "wayland" ] }
bevy_log = "0.16.0"
bevy_platform = "0.16.0"
cdda_json_files = { path = "crates/cdda_json_files" }
either = "1"
fastrand = "2"
gameplay = { path = "crates/gameplay" }
gameplay_transition_state = { path = "crates/gameplay_transition_state" }
hud = { path = "crates/hud" }
keyboard = { path = "crates/keyboard" }
loading = { path = "crates/loading" }
main_menu = { path = "crates/main_menu" }
manual = { path = "crates/manual" }
pathfinding = "4"
glob = "0.3"
pre_gameplay = { path = "crates/pre_gameplay" }
regex = "1"
serde = { version = "1", features = ["derive", "rc" ] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
units = { path = "crates/units" }
util = { path = "crates/util" }

[features]
# We use --no-default-features for production builds. See .github/workflows/ci.yml
default = ["bevy/dynamic_linking"]

[profile.dev.package."*"]
opt-level = 3 # copied by https://bevy-cheatbook.github.io/pitfalls/performance.html

[profile.dev-opt] # Used in development, with performance similar to release
inherits = "dev"
opt-level = 3 # inspired by https://bevy-cheatbook.github.io/pitfalls/performance.html

[profile.release]
debug = "line-tables-only" # For useful bug reports
lto = "thin"
panic = 'abort'

[lints]
workspace = true

[workspace.lints.rust]
# Forbidden groups
keyword-idents = { level = "forbid", priority = -1 }
let-underscore = { level = "forbid", priority = -1 }
rust-2018-compatibility = { level = "forbid", priority = -1 }
rust-2021-compatibility = { level = "forbid", priority = -1 }
rust-2024-compatibility = { level = "forbid", priority = -1 }
# Denied groups
nonstandard-style = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
# Forbidden lints
ambiguous_associated_items = "forbid"
array_into_iter = "forbid"
bare_trait_objects = "forbid"
coherence_leak_check = "forbid"
conflicting_repr_hints = "forbid"
const_evaluatable_unchecked = "forbid"
deref_into_dyn_supertrait = "forbid"
ellipsis_inclusive_range_patterns = "forbid"
explicit_outlives_requirements = "forbid"
forbidden_lint_groups = "forbid"
ill_formed_attribute_input = "forbid"
invalid_doc_attributes = "forbid"
invalid_type_param_default = "forbid"
late_bound_lifetime_arguments = "forbid"
legacy_derive_helpers = "forbid"
macro_expanded_macro_exports_accessed_by_absolute_paths = "forbid"
missing_fragment_specifier = "forbid"
non_fmt_panics = "forbid"
patterns_in_fns_without_body = "forbid"
private_interfaces = "forbid"
private_bounds = "forbid"
proc_macro_derive_resolution_fallback = "forbid"
pub_use_of_private_extern_crate = "forbid"
rust_2021_incompatible_closure_captures = "forbid"
rust_2021_incompatible_or_patterns = "forbid"
rust_2021_prefixes_incompatible_syntax = "forbid"
rust_2021_prelude_collisions = "forbid"
semicolon_in_expressions_from_macros = "forbid"
soft_unstable = "forbid"
uninhabited_static = "forbid"
unsafe_code = "forbid"
unstable_name_collisions = "forbid"
# Denied
non_camel_case_types = "deny"
non_upper_case_globals = "deny"
unreachable_code = "deny"
unreachable_pub = "deny"
unused_attributes = "deny"
unused_macros = "deny"
# Warned
dead_code = "warn"
# Allow
elided_lifetimes_in_paths = "allow" # See https://github.com/rust-lang/rust/issues/91639

[workspace.lints.clippy]
# Categories
#   Exceptions in each category
cargo = { level = "deny", priority = -1 }
    cargo_common_metadata = "allow"
    multiple_crate_versions = "allow"
complexity = { level = "deny", priority = -1 }
    too_many_arguments = "allow" # Doesn't work well with bevy
    type_complexity = "allow" # Doesn't work well with bevy
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
    derive_partial_eq_without_eq = "allow" # Not needed
    missing_panics_doc = "allow"
    option_if_let_else = "allow" # Often bad for readability
    redundant_pub_crate = "allow" # Less clear
    significant_drop_tightening = "allow" # False positives
    suboptimal_flops = "allow" # Less clear
pedantic = { level = "deny", priority = -1 }
    cast_possible_truncation = "allow"
    cast_precision_loss = "allow"
    cast_possible_wrap = "allow"
    cast_sign_loss = "allow"
    redundant_else = "allow"
    similar_names = "allow"
    struct_field_names = "allow" # Doens't work well with CDDA data
perf = { level = "forbid", priority = -1 }
restriction = { level = "allow", priority = -1 }
    allow_attributes = "forbid"
    as_underscore = "forbid"
    assertions_on_result_states = "forbid"
    dbg_macro = "warn"
    deref_by_slicing = "forbid"
    disallowed_script_idents = "forbid"
    if_then_some_else_none = "forbid"
    infinite_loop = "forbid"
    missing_assert_message = "forbid"
    mixed_read_write_in_expression = "forbid"
    modulo_arithmetic = "forbid"
    mutex_atomic = "forbid"
    mutex_integer = "forbid"
    needless_raw_strings = "forbid"
    non_zero_suggestions = "forbid"
    pathbuf_init_then_push = "forbid"
    print_stderr = "warn"
    print_stdout = "warn"
    pub_without_shorthand = "forbid"
    same_name_method = "forbid"
    semicolon_inside_block = "forbid"
    str_to_string = "forbid"
    string_lit_chars_any = "forbid"
    string_slice = "forbid"
    string_to_string = "forbid"
    tests_outside_test_module = "forbid"
    unwrap_used = "forbid"
    unneeded_field_pattern = "forbid"
    unseparated_literal_suffix = "forbid"
    unused_result_ok = "forbid"
    unused_trait_names = "forbid"
    verbose_file_reads = "forbid"
style = { level = "forbid", priority = -1 }
suspicious = { level = "forbid", priority = -1 }
