[package]
name = "cdda_json_files"
description = "A library for working with files from Cataclysm: Datk Days Ahead"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
either = "1"
hashbrown = { version = "0.14", features = ["serde"] }
fastrand = "2"
serde = { version = "1", features = ["derive", "rc" ] }
serde_json = "1"
units = { path = "../units" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
