[package]
name = "cdda_json_files"
description = "A library for working with files from Cataclysm: Datk Days Ahead"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
bevy_log = { workspace = true }
either = { workspace = true }
bevy_platform_support = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
units = { path = "../units" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }

[lints]
workspace = true
