[package]
name = "cdda_json_files"
description = "A library for working with files from Cataclysm: Datk Days Ahead"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
bevy_log = { workspace = true }
either = { workspace = true }
bevy_platform = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
units = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "default-tls", "json"], default-features = false }

[lints]
workspace = true
