[package]
name = "gameplay"
description = "The in-game world"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
cdda_json_files = { workspace = true }
either = { workspace = true }
fastrand = { workspace = true }
float-ord = "0.3"
gameplay_cdda = { workspace = true }
gameplay_cdda_active_sav = { workspace = true }
gameplay_local = { workspace = true }
gameplay_location = { workspace = true }
gameplay_resource = { workspace = true }
gameplay_transition_state = { workspace = true }
hud = { workspace = true }
keyboard = { workspace = true }
manual = { workspace = true }
pathfinding = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thread_local = "1"
units = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
