[package]
name = "gameplay_action_planning"
version = "0.1.0"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
cdda_json_files = { workspace = true }
fastrand = { workspace = true }
float-ord = "0.3"
gameplay_character = { workspace = true }
gameplay_common = { workspace = true }
gameplay_crafting = { workspace = true }
gameplay_location = { workspace = true }
gameplay_log = { workspace = true }
gameplay_perception = { workspace = true }
gameplay_player = { workspace = true }
gameplay_resource = { workspace = true }
gameplay_time = { workspace = true }
gameplay_world = { workspace = true }
hud = { workspace = true }
pathfinding = { workspace = true }
strum = { workspace = true }
text = { workspace = true }
units = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
