[package]
name = "gameplay_behavior"
version = "0.1.0"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
cdda_json_files = { workspace = true }
either = { workspace = true }
gameplay_action_planning = { workspace = true }
gameplay_cdda = { workspace = true }
gameplay_character = { workspace = true }
gameplay_common = { workspace = true }
gameplay_crafting = { workspace = true }
gameplay_focus = { workspace = true }
gameplay_item = { workspace = true }
gameplay_local = { workspace = true }
gameplay_location = { workspace = true }
gameplay_log = { workspace = true }
gameplay_model = { workspace = true }
gameplay_object = { workspace = true }
gameplay_perception = { workspace = true }
gameplay_resource = { workspace = true }
gameplay_player = { workspace = true }
gameplay_relations = { workspace = true }
gameplay_spawn = { workspace = true }
gameplay_terrain = { workspace = true }
gameplay_time = { workspace = true }
gameplay_vehicle = { workspace = true }
gameplay_visualization = { workspace = true }
gameplay_world = { workspace = true }
thread_local = "1"
text = { workspace = true }
units = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
