[package]
name = "gameplay_cdda"
description = "Parts related to Cataclysm:DDA of the in-game world"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
cdda_json_files = { workspace = true }
either = { workspace = true }
fastrand = { workspace = true }
gameplay_location = { workspace = true }
gameplay_resource = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
units = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
