[package]
name = "gameplay_crafting"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
cdda_json_files = { workspace = true }
gameplay_cdda = { workspace = true }
gameplay_common = { workspace = true }
gameplay_item = { workspace = true }
gameplay_log = { workspace = true }
gameplay_model = { workspace = true }
gameplay_nearby = { workspace = true }
gameplay_location = { workspace = true }
hud = { workspace = true }
text = { workspace = true }
units = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
