[package]
name = "gameplay_location"
description = "In-game location data"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
bresenham = "0.1"
bevy = { workspace = true }
cdda_json_files = { workspace = true }
keyboard = { workspace = true }
strum = { workspace = true }
units = { workspace = true }

[lints]
workspace = true
