[package]
name = "gameplay_object"
description = "In-game object components"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
cdda_json_files = { workspace = true }
gameplay_common = { workspace = true }
gameplay_location = { workspace = true }
hud = { workspace = true }
text = { workspace = true }
units = { workspace = true }

[lints]
workspace = true
