[package]
name = "gameplay_perception"
description = "Player character perception of the gameplay world"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
bevy = { workspace = true }
gameplay_cdda = { workspace = true }
gameplay_common = { workspace = true }
gameplay_focus = { workspace = true }
gameplay_location = { workspace = true }
gameplay_log = { workspace = true }
gameplay_object = { workspace = true }
gameplay_player = { workspace = true }
gameplay_resource = { workspace = true }
gameplay_terrain = { workspace = true }
gameplay_time = { workspace = true }
gameplay_world = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
