[package]
name = "gameplay_player"
version = "0.1.0"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
gameplay_crafting = { workspace = true }
gameplay_location = { workspace = true }
gameplay_log = { workspace = true }
hud = { workspace = true }
units = { workspace = true }

[lints]
workspace = true
