[package]
name = "gameplay_screen_base"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
gameplay_action_planning = { workspace = true }
gameplay_camera = { workspace = true }
gameplay_character = { workspace = true }
gameplay_focus = { workspace = true }
gameplay_location = { workspace = true }
gameplay_log = { workspace = true }
gameplay_player = { workspace = true }
gameplay_screen_state = { workspace = true }
gameplay_visualization = { workspace = true }
keyboard = { workspace = true }
manual = { workspace = true }
strum = { workspace = true }
text = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
