[package]
name = "gameplay_screen_crafting"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
cdda_json_files = { workspace = true }
gameplay_action_planning = { workspace = true }
gameplay_behavior = { workspace = true }
gameplay_cdda = { workspace = true }
gameplay_cdda_active_sav = { workspace = true }
gameplay_common = { workspace = true }
gameplay_crafting = { workspace = true }
gameplay_item = { workspace = true }
gameplay_location = { workspace = true }
gameplay_log = { workspace = true }
gameplay_model = { workspace = true }
gameplay_player = { workspace = true }
gameplay_screen_state = { workspace = true }
hud = { workspace = true }
keyboard = { workspace = true }
manual = { workspace = true }
selection_list = { workspace = true }
text = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
