[package]
name = "gameplay_screen_menu"
version = "0.1.0"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
gameplay_screen_state = { workspace = true }
hud = { workspace = true }
keyboard = { workspace = true }
manual = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
