[package]
name = "gameplay_screen_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
cdda_json_files = { workspace = true }
gameplay_common = { workspace = true }
gameplay_item = { workspace = true }
gameplay_location = { workspace = true }
gameplay_nearby = { workspace = true }
gameplay_player = { workspace = true }
gameplay_screen_state = { workspace = true }
hud = { workspace = true }
keyboard = { workspace = true }
manual = { workspace = true }
selection_list = { workspace = true }
util = { workspace = true }

[lints]
workspace = true
